fix: consul startup parameters and typos